--- a/src/components/Header/NavigationList/NavigationList.module.scss
+++ b/src/components/Header/NavigationList/NavigationList.module.scss
@@ -8,7 +8,7 @@
   gap: 1.5rem;
 
   @media (max-width: 1100px) {
-    margin-bottom: 1rem;
+    margin-bottom: 2vw;
   }
 
   @media (max-width: 800px) {
